[gd_scene load_steps=2 format=3 uid="uid://di5l3yh6k5cb5"]

[ext_resource type="Script" uid="uid://eyp5vwys740f" path="res://scenes/main/main_menu/join_menu.gd" id="1_b54b5"]

[node name="joinMenu" type="Control" node_paths=PackedStringArray("ip_edit")]
clip_contents = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -135.0
offset_right = 259.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b54b5")
ip_edit = NodePath("MarginContainer/VBoxContainer/IPLineEdit")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IPLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "192.168.1"
placeholder_text = "Enter IP Address"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="JoinButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Join
"

[node name="backButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Back
"

[node name="JoinPrompt" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/JoinPrompt"]
layout_mode = 2
size_flags_vertical = 6
text = "Joining please wait. . ."

[node name="Button" type="Button" parent="MarginContainer/JoinPrompt"]
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
text = "cancel"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/JoinPrompt/Button" to="." method="_on_button_pressed"]
